# rust-kube-operator

./: Cargo.toml  README.md
src/: crdgen.rs  deployment.rs  lib.rs  main.rs  operator.rs  telemetry.rs
yaml/: custom-app.yaml  patch-custom-app.yaml
