[package]
name = "rust-kube-operator"
version = "0.1.0"
edition = "2021"

[lib]
name = "operator"
path = "src/lib.rs"

[features]
default = []

[dependencies]
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0.85"
serde = "1.0.144"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
schemars = "0.8.10"
prometheus = "0.13.1"
chrono = { version = "0.4.22", features = ["serde"] }
thiserror = "1.0.33"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.74.0"
